--- a/service.html
+++ b/service.html
@@ -100,31 +100,31 @@
                     </div>
                     <ul class="menu">
                         <li>
-                            <a href="#0">Home</a>
-                            <ul class="submenu">
+                            <a href="index.html">Home</a>
+                            <!-- <ul class="submenu">
                                 <li>
                                     <a href="index.html">Home One</a>
                                 </li>
                                 <li>
                                     <a href="index-2.html">Home Two</a>
                                 </li>
-                            </ul>
+                            </ul> -->
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="about.html">About</a>
-                        </li>
+                        </li> -->
                         <li>
-                            <a href="#0">Services</a>
+                            <a href="#0">NMIMS-NGASCE</a>
                             <ul class="submenu">
                                 <li>
-                                    <a href="#0">Services</a>
+                                    <a href="about.html">NMIMS Global Student Zone</a>
                                 </li>
                                 <li>
-                                    <a href="service-details.html">Service Details</a>
+                                    <a href="faq.html">NMIMS Exams Faq</a>
                                 </li>
                             </ul>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#0">Team</a>
                             <ul class="submenu">
                                 <li>
@@ -145,10 +145,10 @@
                                     <a href="project-details.html">project details</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> 
                         <li>
-                            <a href="#0">Pages</a>
-                            <ul class="submenu">
+                            <a href="#0">Career</a>
+                             <ul class="submenu">
                                 <li>
                                     <a href="gallery.html">Gallery</a>
                                 </li>
@@ -161,11 +161,11 @@
                                         <li>
                                             <a href="shop-details.html">Shop Details</a>
                                         </li>
-                                    </ul>
+                                    </ul> 
                                 </li>
                                 <li>
-                                    <a href="#0">Account</a>
-                                    <ul class="submenu">
+                                    <a href="#0">Blog</a>
+                                     <ul class="submenu">
                                         <li>
                                             <a href="sign-up.html">Sign Up</a>
                                         </li>
@@ -192,10 +192,10 @@
                                 <li>
                                     <a href="404.html">Error Page</a>
                                 </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#0">News</a>
+                            </ul> 
+                        </li>-->
+                         <li>
+                            <a href="#0">Blog</a>
                             <ul class="submenu">
                                 <li>
                                     <a href="blog.html">Blog</a>
@@ -204,7 +204,7 @@
                                     <a href="blog-details.html">Blog Details</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> 
                         <li>
                             <a href="contact.html">Contact Us</a>
                         </li>
