added footer changes

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </ul> -->
                         </li>
                         <li>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="/contact.html">Contact Us</a>
                         </li>
                         <li class="ml-auto">
                             <a href="#0" class="search-bar"><i class="fas fa-search"></i></a>
@@ -1247,100 +1247,201 @@
     <!-- ==========Footer Section Starts Here========== -->
     <footer>
         <div class="container">
+            <div class="mt-5 footer-widget widget-link">
+                <h4>MBA PROGRAMS in ODL Mode</h4>
+                <div class="mb-5">
+                    <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-marketing-management/">Marketing Management</a>
+                    | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-financial-management/">Financial Management</a>
+                    | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-business-management/">Business Management</a> |
+                    <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-human-resource-management/">Human Resource
+                        Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-international-trade-management/">International
+                        Trade Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-banking-and-finance-management/">Banking and
+                        Finance Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-supply-chain-management/">Supply Chain
+                        Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-operations-management/"> Operations
+                        Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-retail-management/"> Retail Management</a> | <a
+                        class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-mba-information-technology-and-systems-management/">Information
+                        Technology and Systems Management</a>
+                </div>
+            </div>
+            <!-- <div class="mt-3 footer-widget widget-link">
+                <h4>EXECUTIVE PROGRAMS</h4>
+                <div class="mb-5"><a class="linkfootertop" href="https://www.learningroutes.in/mba-for-working-executives/">MBA for
+                        working executives</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/m-sc-in-artificial-intelligence-and-machine-learning/">Master
+                        of Science in Artificial Intelligence &amp; Machine Learning Ops</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/m-sc-in-applied-finance/">MSc. in Applied Finance </a></div>
+                <div>
+                </div>
+            </div> -->
+            <div class="mt-3 footer-widget widget-link">
+                <h4>DISTANCE DIPLOMA PROGRAMS</h4>
+                <div class="mb-5"><a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-supply-chain-management/">Supply
+                        Chain Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-operations-management/">Operation
+                        Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-marketing-management/">Marketing
+                        Management </a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-international-trade-management/">International
+                        Trade Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-human-resource-management/">Human
+                        Resource Management </a>| <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-financial-management/">Financial
+                        Management | </a><a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-business-management/">Business
+                        Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-retail-management/">Retail
+                        Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/distance-diploma-course-in-banking-finance-management/">Banking
+                        &amp; Finance Management</a></div>
+            </div>
+            <div class="mt-5 footer-widget widget-link">
+                <h4>CERTIFICATION PROGRAMS</h4>
+                <div class="mb-5"><a class="linkfootertop"
+                        href="https://www.learningroutes.in/certification-program-in-corporate-communications/">Certificate
+                        Program In Corporate Communications</a>| <a class="linkfootertop"
+                        href="https://www.learningroutes.in/certification-program-in-it-management/">Certificate Program
+                        In IT Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/certification-program-in-business-management/">Certificate
+                        Program In Business Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/certification-program-in-project-management/">Certificate
+                        Program In Project Management</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/certification-program-in-operations-management/">Certificate
+                        Program In Operations Management</a></div>
+
+            </div>
+            <div class="mt-5 footer-widget widget-link">
+                <h4>DISTANCE BACHELOR PROGRAMS</h4>
+                <div class="mb-5"><a class="linkfootertop"
+                        href="https://www.learningroutes.in/bachelor-in-business-administration-bba/">Bachelor In
+                        Business Administration</a> | <a class="linkfootertop"
+                        href="https://www.learningroutes.in/bachelor-of-commerce-b-com/">Bachelor Of Commerce</a></div>
+            </div>
             <div class="footer-top">
+
+
+
                 <div class="footer-wrapper">
+
                     <div class="footer-widget widget-about">
                         <div class="footer-logo">
                             <a href="index.html"><img src="assets/images/logo/footer-logo1.png" alt="logo"></a>
                         </div>
-                        <p>Senectus nunc volutpat sed at fusce, varius nulla orci luctus, ac ultricies ipsum aliquam bibendum felis, platea erat sit. Est dolor</p>
-                        <div class="footer-contact">
+                        <p>As an Affiliate Enquiry Partner (AEP) of NMIMS Global Access School for Continuing Education
+                            (NGA-SCE), we display and showcase program information of NGA-SCE. NGA-SCE solely manages
+                            the Counselling, Admission, Program delivery and Examination.</p>
+                        <!-- <div class="footer-contact">
                             <a href="Tel:0123654789" class="call">2222 - 3333 - 666 3333 - 666</a>
                             <a href="Mailto:demo@gmai.com" class="mail"><span class="__cf_email__" data-cfemail="4d292820220d2a202c24632e2220">[email&#160;protected]</span></a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="footer-widget widget-link">
-                        <h5 class="title">Our Quick Link</h5>
+                        <h5 class="title">USEFUL LINKS</h5>
                         <ul>
                             <li>
-                                <a href="#0">Professional Team</a>
+                                <a href="#0">Home</a>
                             </li>
                             <li>
-                                <a href="#0">Support</a>
+                                <a href="#0">NMIMS-NGASCE</a>
                             </li>
                             <li>
-                                <a href="#0">Pricing</a>
+                                <a href="#0">NMIMS Global Distance MBA</a>
                             </li>
                             <li>
-                                <a href="#0">Privacy Policy</a>
+                                <a href="#0">NMIMS Student Zone</a>
                             </li>
                             <li>
-                                <a href="#0">Services</a>
+                                <a href="#0">NMIMS Exams FAQ</a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-widget widget-link">
-                        <h5 class="title">Company</h5>
+                        <h5 class="title">OUR OFFICES</h5>
                         <ul>
                             <li>
-                                <a href="#0">Web Design</a>
+                                <a href="#0">Bengaluru</a>
                             </li>
                             <li>
-                                <a href="#0">Our History</a>
+                                <a href="#0">Delhi</a>
                             </li>
                             <li>
-                                <a href="#0">Our Services</a>
+                                <a href="#0">Gurugram </a>
                             </li>
                             <li>
-                                <a href="#0">Become A Member</a>
+                                <a href="#0">Jaipur</a>
                             </li>
                             <li>
-                                <a href="#0">Appointment</a>
+                                <a href="#0">Mohali</a>
                             </li>
                             <li>
-                                <a href="#0">Our Support Team</a>
+                                <a href="#0">Mumbai</a>
                             </li>
+
                         </ul>
                     </div>
                     <div class="footer-widget widget-link">
-                        <h5 class="title">My Account</h5>
+                        <h5 class="title">LATEST NEWS</h5>
                         <ul>
                             <li>
-                                <a href="#0">About Us</a>
+                                <p>Does Getting an MBA Make You a Better</p>
                             </li>
                             <li>
-                                <a href="#0">My Account</a>
+                                <p>Entrepreneur?</p>
                             </li>
                             <li>
-                                <a href="#0">Privacy Policy</a>
+                                <p>Elon Musk’s Twitter Logo Change: Why the Dog Represents More Than Just a Meme?</p>
                             </li>
                             <li>
-                                <a href="#0">Sign In </a>
-                            </li>
-                            <li>
-                                <a href="#0">Information</a>
+                                <p>Why an MBA After Earning a BA in Economics Makes Sense</p>
                             </li>
                         </ul>
+                    </div>
+                    <div class="info-item footer-widget widget-link">
+                        <h5 class="title">FOLLOW US</h5>
+                        <ul class="header-social">
+                            <li>
+                                <a href="#0"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-google-plus-g"></i></a>
+                            </li>
+                        </ul>
+                        <p class="mt-3">Follow us socially to get all the latest news and notifications related to top
+                            B-Schools</p>
+
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="footer-bottom-wrapper">
                     <div class="item">
-                        <p class="m-0">Copyright © 2020. All rights reserved</p>
+                        <p class="m-0">Learning Routes || Affiliate Enquiry Partner (AEP)</p>
                     </div>
                     <ul class="item">
                         <li>
-                            <a href="#0">Home</a>
+                            <a href="#0">Terms Of Use </a>
                         </li>
                         <li>
-                            <a href="#0">About Us</a>
+                            <a href="#0">Privacy Policy</a>
                         </li>
                         <li>
-                            <a href="#0">News</a>
-                        </li>
-                        <li>
-                            <a href="#0">Contact Us</a>
+                            <a href="#0">Sitemap</a>
                         </li>
                     </ul>
                 </div>
