--- a/blog.html
+++ b/blog.html
@@ -51,177 +51,178 @@
                 </div>
             </div>
         </div>
-        <div class="header-middle">
-            <div class="container">
-                <div class="header-wrapper">
-                    <div class="logo d-none d-lg-block">
-                        <a href="#0"><img src="assets/images/logo/logo.png" alt="logo"></a>
-                    </div>
-                    <div class="info-area">
-                        <div class="info-item">
-                            <div class="info-thumb">
-                                <i class="flaticon-email"></i>
+    <div class="header-middle">
+                    <div class="container">
+                        <div class="header-wrapper">
+                            <div class="logo d-none d-lg-block">
+                                <a href="#0"><img src="assets/images/logo/logo.png" alt="logo"></a>
                             </div>
-                            <div class="info-content">
-                                <h6 class="title">Email Address</h6>
-                                <a href="Mailto:companyemail@gmail.com"><span class="__cf_email__" data-cfemail="ff9c90928f9e91869a929e9693bf98929e9693d19c9092">[email&#160;protected]</span></a>
-                            </div>
-                        </div>
-                        <div class="info-item">
-                            <div class="info-thumb">
-                                <i class="flaticon-map"></i>
-                            </div>
-                            <div class="info-content">
-                                <h6 class="title">Office Address</h6>
-                                <span>1209 Elephent Road, Uttara</span>
-                            </div>
-                        </div>
-                        <div class="info-item">
-                            <ul class="header-social">
-                                <li>
-                                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-twitter"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-linkedin-in"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-google-plus-g"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="header-area style-2">
-                    <div class="logo d-lg-none">
-                        <a href="#0"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a>
-                    </div>
-                    <ul class="menu">
-                        <li>
-                            <a href="index.html">Home</a>
-                            <!-- <ul class="submenu">
-                                <li>
-                                    <a href="index.html">Home One</a>
-                                </li>
-                                <li>
-                                    <a href="index-2.html">Home Two</a>
-                                </li>
-                            </ul> -->
-                        </li>
-                        <!-- <li>
-                            <a href="about.html">About</a>
-                        </li> -->
-                        <li>
-                            <a href="#0">NMIMS-NGASCE</a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="about.html">NMIMS Global Student Zone</a>
-                                </li>
-                                <li>
-                                    <a href="faq.html">NMIMS Exams Faq</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <!-- <li>
-                            <a href="#0">Career</a>
-                             <ul class="submenu">
-                                <li>
-                                    <a href="team.html">Team Members</a>
-                                </li>
-                                <li>
-                                    <a href="team-details.html">Team Details</a>
-                                </li>
-                            </ul> 
-                        </li>
-                        <li>
-                            <a href="#0">Project</a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="project.html">project</a>
-                                </li>
-                                <li>
-                                    <a href="project-details.html">project details</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#0">Pages</a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="gallery.html">Gallery</a>
-                                </li>
-                                <li>
-                                    <a href="#0">Shop</a>
-                                    <ul class="submenu">
+                            <div class="info-area">
+                                <div class="info-item">
+                                    <div class="info-thumb">
+                                        <i class="flaticon-email"></i>
+                                    </div>
+                                    <div class="info-content">
+                                        <h6 class="title">Email Address</h6>
+                                        <a href="Mailto:companyemail@gmail.com"><span class="__cf_email__" data-cfemail="86e5e9ebf6e7e8ffe3ebe7efeac6e1ebe7efeaa8e5e9eb">[email&#160;protected]</span></a>
+                                    </div>
+                                </div>
+                                <div class="info-item">
+                                    <div class="info-thumb">
+                                        <i class="flaticon-map"></i>
+                                    </div>
+                                    <div class="info-content">
+                                        <h6 class="title">Office Address</h6>
+                                        <span>1209 Elephent Road, Utt</span>
+                                    </div>
+                                </div>
+                                <div class="info-item">
+                                    <ul class="header-social">
                                         <li>
-                                            <a href="shop.html">Shop</a>
+                                            <a href="#0"><i class="fab fa-facebook-f"></i></a>
                                         </li>
                                         <li>
-                                            <a href="shop-details.html">Shop Details</a>
+                                            <a href="#0"><i class="fab fa-twitter"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#0"><i class="fab fa-linkedin-in"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#0"><i class="fab fa-google-plus-g"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="header-area">
+                            <div class="logo d-lg-none">
+                                <a href="#0"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a>
+                            </div>
+                            <ul class="menu">
+                                <li>
+                                    <a href="index.html">Home</a>
+                                    <!-- <ul class="submenu">
+                                        <li>
+                                            <a href="#0">Home One</a>
+                                        </li>
+                                        <li>
+                                            <a href="index-2.html">Home Two</a>
+                                        </li>
+                                    </ul> -->
+                                </li>
+                                <!-- <li>
+                                    <a href="about.html">About</a>
+                                </li> -->
+                                <li>
+                                    <a href="#0">NMIMS-NGASCE</a>
+                                    <ul class="submenu">
+                                        <li>
+                                            <a href="about.html">NMIMS Global Student Zone</a>
+                                        </li>
+                                        <li>
+                                            <a href="faq.html">NMIMS Exams Faq</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <!-- <li>
+                                    <a href="#0">Team</a>
+                                    <ul class="submenu">
+                                        <li>
+                                            <a href="team.html">Team Members</a>
+                                        </li>
+                                        <li>
+                                            <a href="team-details.html">Team Details</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#0">Account</a>
+                                    <a href="#0">Project</a>
                                     <ul class="submenu">
                                         <li>
-                                            <a href="sign-up.html">Sign Up</a>
+                                            <a href="project.html">project</a>
                                         </li>
                                         <li>
-                                            <a href="sign-in.html">Sign In</a>
+                                            <a href="project-details.html">project details</a>
                                         </li>
                                     </ul>
+                                </li> 
+                                <li>
+                                    <a href="career.html">Career</a>
+                                      <ul class="submenu">
+                                        <li>
+                                            <a href="gallery.html">Gallery</a>
+                                        </li>
+                                        <li>
+                                            <a href="#0">Shop</a>
+                                            <ul class="submenu">
+                                                <li>
+                                                    <a href="shop.html">Shop</a>
+                                                </li>
+                                                <li>
+                                                    <a href="shop-details.html">Shop Details</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="#0">Account</a>
+                                            <ul class="submenu">
+                                                <li>
+                                                    <a href="sign-up.html">Sign Up</a>
+                                                </li>
+                                                <li>
+                                                    <a href="sign-in.html">Sign In</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="pricing-plan.html">Pricing Plan</a>
+                                        </li>
+                                        <li>
+                                            <a href="privacy-policy.html">Privacy & Policy</a>
+                                        </li>
+                                        <li>
+                                            <a href="terms-condition.html">Terms & Condition</a>
+                                        </li>
+                                        <li>
+                                            <a href="refund-policy.html">Refund Policy</a>
+                                        </li>
+                                        <li>
+                                            <a href="faq.html">Faqs</a>
+                                        </li>
+                                        <li>
+                                            <a href="404.html">Error Page</a>
+                                        </li>
+                                    </ul> -->
                                 </li>
                                 <li>
-                                    <a href="pricing-plan.html">Pricing Plan</a>
+                                    <a href="blog.html">Blog</a>
+                                    <!-- <ul class="submenu">
+                                        <li>
+                                            <a href="blog.html">Blog</a>
+                                        </li>
+                                        <li>
+                                            <a href="blog-details.html">Blog Details</a>
+                                        </li>
+                                    </ul> -->
                                 </li>
                                 <li>
-                                    <a href="privacy-policy.html">Privacy & Policy</a>
+                                    <a href="/contact.html">Contact Us</a>
                                 </li>
-                                <li>
-                                    <a href="terms-condition.html">Terms & Condition</a>
-                                </li>
-                                <li>
-                                    <a href="refund-policy.html">Refund Policy</a>
-                                </li>
-                                <li>
-                                    <a href="faq.html">Faqs</a>
-                                </li>
-                                <li>
-                                    <a href="404.html">Error Page</a>
+                                <li class="ml-auto">
+                                    <a href="#0" class="search-bar"><i class="fas fa-search"></i></a>
                                 </li>
                             </ul>
-                        </li> -->
-                        <li>
-                            <a href="blog.html">Blog</a>
-                            <!-- <ul class="submenu">
-                                <li>
-                                    <a href="#0">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="blog-details.html">Blog Details</a>
-                                </li>
-                            </ul> -->
-                        </li>
-                        <li>
-                            <a href="contact.html">Contact Us</a>
-                        </li>
-                        <li class="ml-auto">
-                            <a href="#0" class="search-bar"><i class="fas fa-search"></i></a>
-                        </li>
-                    </ul>
-                    <div class="header-bar2 ml-auto d-lg-none">
-                        <i class="fas fa-ellipsis-h"></i>
-                    </div>
-                    <div class="header-bar d-lg-none">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                            <div class="header-bar2 ml-auto d-lg-none">
+                                <i class="fas fa-ellipsis-h"></i>
+                            </div>
+                            <div class="header-bar d-lg-none">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
         </div>
     </header>
     
