--- a/blog.html
+++ b/blog.html
@@ -404,7 +404,7 @@
                                 <a href="BUSINESS .html">BUSINESS</a>
                             </li>
                             <li>
-                                <a href="#0">CAREER & JOBS</a>
+                                <a href="CAREER & JOBS .html">CAREER & JOBS</a>
                             </li>
                             <li>
                                 <a href="CASE STUDY .html">CASE STUDY</a>
@@ -413,22 +413,22 @@
                                 <a href="CHATGPT .html">CHATGPT</a>
                             </li>
                             <li>
-                                <a href="#0">DATA ANALYTICS</a>
+                                <a href="DATA ANALYTICS .html">DATA ANALYTICS</a>
                             </li>
                             <li>
-                                <a href="#0">DIGITAL MARKETING</a>
+                                <a href="DIGITAL MARKETING .html">DIGITAL MARKETING</a>
                             </li>
                             <li>
-                                <a href="#0">DIPLOMA</a>
+                                <a href="DIPLOMA .html">DIPLOMA</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE B.COM</a>
+                                <a href="distance b-com.html">DISTANCE B.COM</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE BBA</a>
+                                <a href="DISTANCE BBA .html">DISTANCE BBA</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE LEARNING</a>
+                                <a href="DISTANCE LEARNING .html">DISTANCE LEARNING</a>
                             </li>
                             <li>
                                 <a href="#0">DISTANCE MBA</a>
@@ -437,10 +437,10 @@
                                 <a href="#0">DISTANCE MBA IN INDIA</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE MBA VS REGULAR MBA</a>
+                                <a href="DISTANCE MBA VS REGULAR MBA .html">DISTANCE MBA VS REGULAR MBA</a>
                             </li>
                             <li>
-                                <a href="#0">EDUCATION</a>
+                                <a href="HIGHER EDUCATION.html">EDUCATION</a>
                             </li>
                             <li>
                                 <a href="#0">ENTRANCE EXAMS</a>
@@ -448,9 +448,9 @@
                             <li>
                                 <a href="#0">ENTREPRENEUR</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#0">EXECUTIVE MBA</a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="#0">HIGHER EDUCATION</a>
                             </li>
@@ -494,7 +494,7 @@
                                 <a href="#0">UNCATEGORIZED</a>
                             </li>
                             <li>
-                                <a href="#0">WOMEN’S DAY</a>
+                                <a href="Women'sDay.html">WOMEN’S DAY</a>
                             </li>
                         </ul>
                     </div>
