added nmims exam pages

--- a/blog.html
+++ b/blog.html
@@ -473,7 +473,7 @@
                                 <a href="#0">NMIMS</a>
                             </li>
                              <li>
-                                <a href="#0">NMIMS EXAM</a>
+                                <a href="nmims-exam.html">NMIMS EXAM</a>
                             </li>
                             <li>
                                 <a href="#0">ODL MBA IN INDIA</a>
@@ -488,7 +488,7 @@
                                 <a href="#0">TECHNOLOGY</a>
                             </li>
                             <li>
-                                <a href="#0">TRENDING TOPIC</a>
+                                <a href="trendingTopic.html">TRENDING TOPIC</a>
                             </li>
                             <li>
                                 <a href="#0">UNCATEGORIZED</a>
