--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </ul> -->
                         </li>
                         <li>
-                            <a href="/contact.html">Contact Us</a>
+                            <a href="contact.html">Contact Us</a>
                         </li>
                         <li class="ml-auto">
                             <a href="#0" class="search-bar"><i class="fas fa-search"></i></a>
