Added New Changes

--- a/NGASCE-26 October.html
+++ b/NGASCE-26 October.html
@@ -254,7 +254,7 @@
                         <a href="index.html">home</a>
                     </li>
                     <li>
-                    
+                    NGASCE
                     </li>
                 </ul>
             </div>
@@ -265,8 +265,7 @@
  
     <!-- ==========Blog Section Starts Here========== -->
     <div class="blog-details padding-top padding-bottom">
-        <h2 style="text-align:center; background: #000;color: #FFF; padding-top: 10px;">NGASCE</h2>
-        <br>
+     
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 mb-50-md-70 mb-lg-0">
