--- a/NMIMS-23rd July.html
+++ b/NMIMS-23rd July.html
@@ -267,8 +267,7 @@
  
     <!-- ==========Blog Section Starts Here========== -->
     <div class="blog-details padding-top padding-bottom">
-        <h2 style="text-align:center; background: #000;color: #FFF; padding-top: 10px;">NMIMS</h2>
-        <br>
+        
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 mb-50-md-70 mb-lg-0">
@@ -396,6 +395,7 @@
                             </div>
                         </div>
                 </div>
+                
                 <ul class="blog-pagination">
                     <li>
                         <a href="blog.html"><i class="fas fa-angle-left"></i></a>
@@ -522,13 +522,13 @@
                                 <a href="#0">TECHNOLOGY</a>
                             </li>
                             <li>
-                                <a href="#0">TRENDING TOPIC</a>
+                                <a href="trendingTopic.html">TRENDING TOPIC</a>
                             </li>
                             <li>
                                 <a href="#0">UNCATEGORIZED</a>
                             </li>
                             <li>
-                                <a href="#0">WOMEN’S DAY</a>
+                                <a href="Women'sDay.html">WOMEN’S DAY</a>
                             </li>
                         </ul>
                     </div>
