added home images

--- a/Women'sDay.html
+++ b/Women'sDay.html
@@ -525,7 +525,7 @@
                                 <a href="#0">NMIMS</a>
                             </li>
                             <li>
-                                <a href="nmims-exam">NMIMS EXAM</a>
+                                <a href="nmims-exam.html">NMIMS EXAM</a>
                             </li>
                             <li>
                                 <a href="#0">ODL MBA IN INDIA</a>
@@ -611,89 +611,49 @@
             <div class="mt-5 footer-widget widget-link">
                 <h4>MBA PROGRAMS in ODL Mode</h4>
                 <div class="mb-5">
-                    <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-marketing-management/">Marketing Management</a>
-                    | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-financial-management/">Financial Management</a>
-                    | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-business-management/">Business Management</a> |
-                    <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-human-resource-management/">Human Resource
-                        Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-international-trade-management/">International
-                        Trade Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-banking-and-finance-management/">Banking and
-                        Finance Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-supply-chain-management/">Supply Chain
-                        Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-operations-management/"> Operations
-                        Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-retail-management/"> Retail Management</a> | <a
-                        class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-mba-information-technology-and-systems-management/">Information
+                    <a class="linkfootertop" href="#0">Marketing Management</a>
+                    | <a class="linkfootertop" href="#0">Financial Management</a>
+                    | <a class="linkfootertop" href="#0">Business Management</a> |
+                    <a class="linkfootertop" href="#0">Human Resource
+                        Management</a> | <a class="linkfootertop" href="#0">International
+                        Trade Management</a> | <a class="linkfootertop" href="#0">Banking and
+                        Finance Management</a> | <a class="linkfootertop" href="#0">Supply Chain
+                        Management</a> | <a class="linkfootertop" href="#0"> Operations
+                        Management</a> | <a class="linkfootertop" href="#0"> Retail Management</a> | <a
+                        class="linkfootertop" href="#0">Information
                         Technology and Systems Management</a>
                 </div>
             </div>
-            <!-- <div class="mt-3 footer-widget widget-link">
-                <h4>EXECUTIVE PROGRAMS</h4>
-                <div class="mb-5"><a class="linkfootertop" href="https://www.learningroutes.in/mba-for-working-executives/">MBA for
-                        working executives</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/m-sc-in-artificial-intelligence-and-machine-learning/">Master
-                        of Science in Artificial Intelligence &amp; Machine Learning Ops</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/m-sc-in-applied-finance/">MSc. in Applied Finance </a></div>
-                <div>
-                </div>
-            </div> -->
             <div class="mt-3 footer-widget widget-link">
                 <h4>DISTANCE DIPLOMA PROGRAMS</h4>
-                <div class="mb-5"><a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-supply-chain-management/">Supply
-                        Chain Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-operations-management/">Operation
-                        Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-marketing-management/">Marketing
-                        Management </a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-international-trade-management/">International
-                        Trade Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-human-resource-management/">Human
-                        Resource Management </a>| <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-financial-management/">Financial
-                        Management | </a><a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-business-management/">Business
-                        Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-retail-management/">Retail
-                        Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/distance-diploma-course-in-banking-finance-management/">Banking
+                <div class="mb-5"><a class="linkfootertop" href="#0">Supply
+                        Chain Management</a> | <a class="linkfootertop" href="#0">Operation
+                        Management</a> | <a class="linkfootertop" href="#0">Marketing
+                        Management </a> | <a class="linkfootertop" href="#0">International
+                        Trade Management</a> | <a class="linkfootertop" href="#0">Human
+                        Resource Management </a>| <a class="linkfootertop" href="#0">Financial
+                        Management | </a><a class="linkfootertop" href="#0">Business
+                        Management</a> | <a class="linkfootertop" href="#0">Retail
+                        Management</a> | <a class="linkfootertop" href="#0">Banking
                         &amp; Finance Management</a></div>
             </div>
             <div class="mt-5 footer-widget widget-link">
                 <h4>CERTIFICATION PROGRAMS</h4>
-                <div class="mb-5"><a class="linkfootertop"
-                        href="https://www.learningroutes.in/certification-program-in-corporate-communications/">Certificate
-                        Program In Corporate Communications</a>| <a class="linkfootertop"
-                        href="https://www.learningroutes.in/certification-program-in-it-management/">Certificate Program
-                        In IT Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/certification-program-in-business-management/">Certificate
-                        Program In Business Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/certification-program-in-project-management/">Certificate
-                        Program In Project Management</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/certification-program-in-operations-management/">Certificate
+                <div class="mb-5"><a class="linkfootertop" href="#0">Certificate
+                        Program In Corporate Communications</a>| <a class="linkfootertop" href="#0">Certificate Program
+                        In IT Management</a> | <a class="linkfootertop" href="#0">Certificate
+                        Program In Business Management</a> | <a class="linkfootertop" href="#0">Certificate
+                        Program In Project Management</a> | <a class="linkfootertop" href="#0">Certificate
                         Program In Operations Management</a></div>
 
             </div>
             <div class="mt-5 footer-widget widget-link">
                 <h4>DISTANCE BACHELOR PROGRAMS</h4>
-                <div class="mb-5"><a class="linkfootertop"
-                        href="https://www.learningroutes.in/bachelor-in-business-administration-bba/">Bachelor In
-                        Business Administration</a> | <a class="linkfootertop"
-                        href="https://www.learningroutes.in/bachelor-of-commerce-b-com/">Bachelor Of Commerce</a></div>
+                <div class="mb-5"><a class="linkfootertop" href="#0">Bachelor In
+                        Business Administration</a> | <a class="linkfootertop" href="#0">Bachelor Of Commerce</a></div>
             </div>
             <div class="footer-top">
-
-
-
                 <div class="footer-wrapper">
-
                     <div class="footer-widget widget-about">
                         <div class="footer-logo">
                             <a href="index.html"><img src="assets/images/logo/footer-logo1.png" alt="logo"></a>
@@ -701,10 +661,6 @@
                         <p>As an Affiliate Enquiry Partner (AEP) of NMIMS Global Access School for Continuing Education
                             (NGA-SCE), we display and showcase program information of NGA-SCE. NGA-SCE solely manages
                             the Counselling, Admission, Program delivery and Examination.</p>
-                        <!-- <div class="footer-contact">
-                            <a href="Tel:0123654789" class="call">2222 - 3333 - 666 3333 - 666</a>
-                            <a href="Mailto:demo@gmai.com" class="mail"><span class="__cf_email__" data-cfemail="4d292820220d2a202c24632e2220">[email&#160;protected]</span></a>
-                        </div> -->
                     </div>
                     <div class="footer-widget widget-link">
                         <h5 class="title">USEFUL LINKS</h5>
